--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                         <li><a class="dropdown-item" href="#">Video</a></li>
                         <li><a class="dropdown-item" href="#">Graphic</a></li>
 
-                        <li><a class="dropdown-item" href="#">Photography</a></li>
+                        <li><a class="dropdown-item" href="photography.html">Photography</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -161,8 +161,8 @@
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <h6 id="contact">Contact Us</h6>
                 <label for="whatsapp">whatsapp:</label>
-                <a href="https://chat.whatsapp.com/Lo1TbKFiLHf4IOPNZvnGOf> <i class=" fa-solid fa-phone"
-                    style="color: green;"></i></a>
+                <a href="https://chat.whatsapp.com/Lo1TbKFiLHf4IOPNZvnGOf"> <i class=" fa-solid fa-phone"
+                        style="color: green;"></i></a>
 
                 <label for="email">email:</label>
                 <a href="https://mail.google.com/"> <i class="fa-solid fa-envelope"
