--- a/photography.html
+++ b/photography.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Your Photography Studio</title>
+    <title>Gralley</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Add this to your head section -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
-
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/01485634d3.js" crossorigin="anonymous"></script>
 </head>
 <style>
@@ -77,7 +77,7 @@
                     <a class="nav-link rectangle" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link rectangle" href="community.html">Community</a>
+                    <a class="nav-link rectangle" href="about.html">about</a>
                 </li>
             </ul>
         </div>
@@ -329,7 +329,7 @@
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <h6 id="contact">Contact Us</h6>
                 <label for="whatsapp">whatsapp:</label>
-                <a href="https://chat.whatsapp.com/JThDckdyYYXLqsNAHELJvO"> <i class="fa-solid fa-phone"
+                <a href="https://chat.whatsapp.com/Lo1TbKFiLHf4IOPNZvnGOf"> <i class="fa-solid fa-phone"
                         style="color: green;"></i></a>
 
                 <label for="email">email:</label>
@@ -340,7 +340,7 @@
                 <h6>Follow Us</h6>
                 <a href="https://github.com/coodic" class="text-white me-3"><i class="fab fa-github"></i></a>
 
-                <a href="https://www.instagram.com/coodic_/" class="text-white me-3"><i
+                <a href="https://www.instagram.com/hagy_images_studio/" class="text-white me-3"><i
                         class="fab fa-instagram"></i></a>
 
 
