--- a/photography.html
+++ b/photography.html
@@ -87,28 +87,28 @@
     <div class="container center">
         <div class="gallery">
             <span style="--i:1">
-                <img src="image/A outdoor/1.jpg" alt="" />
+                <img src="image/A outdoor/1.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:2">
-                <img src="image/A outdoor/2.jpg" alt="" />
+                <img src="image/A outdoor/2.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:3">
-                <img src="image/A outdoor/3.jpg" alt="" />
+                <img src="image/A outdoor/3.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:4">
-                <img src="image/A outdoor/4.jpg" alt="" />
+                <img src="image/A outdoor/4.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:5">
-                <img src="image/A outdoor/5.jpg" alt="" />
+                <img src="image/A outdoor/5.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:6">
-                <img src="image/A outdoor/6.jpg" alt="" />
+                <img src="image/A outdoor/6.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:7">
-                <img src="image/A outdoor/7.jpg" alt="" />
+                <img src="image/A outdoor/7.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:8">
-                <img src="image/A outdoor/8.jpg" alt="" />
+                <img src="image/A outdoor/8.jpg" alt="" loading="lazy" />
             </span>
         </div>
 
@@ -139,102 +139,102 @@
                     <div class="row justify-content-center">
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/1.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/1.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/2.jpg" class=" rounded" alt="...">
-                            </div>
-                        </div>
-
-                        <div class="col-sm">
-                            <div class="cards justify-content-center">
-                                <img src="image/indoor/3.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/2.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/4.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/3.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/5.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/4.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/6.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/5.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/7.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/6.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/8.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/7.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/9.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/8.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/10.jpg" class="rounded" alt="...">
+                                <img src="image/indoor/9.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/11.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/10.jpg" class="rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/12.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/11.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/13.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/12.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/14.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/13.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/15.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/14.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/16.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/15.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/indoor/17.jpg" class=" rounded" alt="...">
+                                <img src="image/indoor/16.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/indoor/17.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
 
@@ -254,58 +254,58 @@
                     <div class="row justify-content-center">
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/1.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/1.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/2.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/2.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/3.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/3.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/4.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/4.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/5.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/5.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/6.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/6.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/7.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/7.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/8.jpg" class=" rounded" alt="...">
+                                <img src="image/A outdoor/8.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="cards justify-content-center">
-                            <img src="image/A outdoor/9.jpg" class=" rounded" alt="...">
+                            <img src="image/A outdoor/9.jpg" class=" rounded" alt="..." loading="lazy">
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="cards justify-content-center">
-                            <img src="image/A outdoor/10.jpg" class=" rounded" alt="...">
+                            <img src="image/A outdoor/10.jpg" class=" rounded" alt="..." loading="lazy">
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="cards justify-content-center">
-                            <img src="image/A outdoor/11.jpg" class=" rounded" alt="...">
+                            <img src="image/A outdoor/11.jpg" class=" rounded" alt="..." loading="lazy">
                         </div>
                     </div>
 
@@ -365,6 +365,8 @@
 
     </footer>
     <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/lozad@1.14.0/dist/lozad.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
