--- a/photography.html
+++ b/photography.html
@@ -373,7 +373,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Custom JS for smooth scrolling -->
-    <script src="js.js"></script>
+    <script src="javascripty/js.js"></script>
 
 </body>
 
