--- a/contact.html
+++ b/contact.html
@@ -105,10 +105,11 @@
                         Services
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Video</a></li>
-                        <li><a class="dropdown-item" href="#">Graphic</a></li>
-
                         <li><a class="dropdown-item" href="photography.html">Photography</a></li>
+                        <li><a class="dropdown-item" href="videography.html">Videography</a></li>
+                        <li><a class="dropdown-item" href="graphic.html">Graphic design</a></li>
+
+
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -173,7 +174,7 @@
 
 
                 <a href="https://www.instagram.com/hagy_images_studio/" class="text-white me-3"><i
-                        class="fab fa-instagram"></i></a>
+                        class="fab fa-instagram" style="color:rgb(172, 91, 104) ;"></i></a>
 
 
             </div>
@@ -203,7 +204,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Custom JS for smooth scrolling -->
-    <script src="javascripty/js.js></script>
+    <script src="java/js.js></script>
 
 </body>
 
