--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                         Services
                     </a>
                     <ul class="dropdown-menu rectangle">
-                        <li><a class="dropdown-item" href="#">Video</a></li>
-                        <li><a class="dropdown-item" href="#">Graphic</a></li>
-
                         <li><a class="dropdown-item" href="photography.html">Photography</a></li>
+                        <li><a class="dropdown-item" href="videography.html">Videography</a></li>
+                        <li><a class="dropdown-item" href="graphic.html">Graphic design</a></li>
+
+
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -71,12 +72,11 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="image/baby/1.jpg" style="font-size:100px; margin-top:10px; " class="d-block w-100 mx-auto"
+                <img src="image/A team/3.jpg" style="font-size:100px; margin-top:10px; " class="d-block w-100 mx-auto"
                     alt="Our Baby Photo Shoot">
                 <div class="carousel-caption text-center">
-                    <h5 style="color: #4CAF50; font-size: 2rem;">Baby Photo</h5>
-                    <p style="font-size: 18px; color: #f2f4f1;">Capturing precious moments with your little ones. Thank
-                        you for choosing us!</p>
+
+                    <h2 class="motto" style="color: rgb(255, 255, 255);"> WELCOME!!</h2>
                 </div>
             </div>
 
@@ -84,9 +84,8 @@
                 <img src="image/A team/1.jpg" style="font-size:100px; margin-top:10px;" class="d-block w-100 mx-auto"
                     alt="Celebration of our Anniversary">
                 <div class="carousel-caption text-center">
-                    <h5 style="color: #4CAF50; font-size: 2rem;">Celebration of our Anniversary</h5>
-                    <p style="font-size: 18px; color: #f2f4f1;">Grateful for your support as we celebrate another
-                        successful year.</p>
+
+                    <h2 class="motto" style="color: rgb(255, 255, 255);">Grand Opening Ceremony</h2>
                 </div>
             </div>
 
@@ -94,9 +93,8 @@
                 <img src="image/A team/2.jpg" class="d-block w-100 mx-auto" style="font-size:100px; margin-top:10px; "
                     alt="The team behind">
                 <div class="carousel-caption text-center">
-                    <h5 style="color: #4CAF50; font-size: 2rem;">The Team Behind</h5>
-                    <p style="font-size: 18px; color: #f2f4f1;">Dedicated team crafting memories, grateful for your
-                        continued support.</p>
+                    <h2 class="motto" style="color: rgb(255, 255, 255);">Team Expert </h2>
+
                 </div>
 
             </div>
@@ -118,10 +116,10 @@
     <div class="container">
 
         <div class="row justify-content-center">
-            <img src="image/indoor/12.jpg" alt="hagy image" class="imagee">
+            <img src="HAGY TRIANGLE LOGO.png" alt="hagy image" class="imagee">
 
             <div class="col-md-8 text-center">
-                <h2 class="motto"> <strong style="font-size: 4rem; color:skyblue">"</strong>Capturing Moments,
+                <h2 class="motto "> <strong style="font-size: 4rem; color:skyblue">"</strong>Capturing Moments,
                     Creating Memories <strong style="font-size: 4rem; color:skyblue">"</strong></h2>
             </div>
         </div>
@@ -145,14 +143,14 @@
             <!-- Photoshoot Service -->
             <div class="col">
                 <div class="card h-100">
-                    <i class="fa-solid fa-camera" style="font-size:100px; margin-top:10px;"></i>
+                    <img src="image//icons/1.png" class="card-img-top" style="width: 160px; height:160px" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Photoshoot</h5>
+                        <h5 class="card-title">Photography</h5>
                         <p class="card-text">Capture beautiful moments with our professional photography services.
                         </p>
 
                         <div class="card-footer">
-                            <a href="garalley.html" class="text-body-secondary">
+                            <a href="photography.html" class="text-body-secondary">
                                 Explore more
                                 <i class="fas fa-arrow-right" style="font-size: 14px;"></i>
                             </a>
@@ -183,14 +181,14 @@
             <!-- Video Production Service -->
             <div class="col">
                 <div class="card h-100">
-                    <i class="fa-solid fa-video" style="font-size:100px; margin-top:10px;"></i>
+                    <img src="image/icons/3.png" class="card-img-top" style="width: 150px; height:150px" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Video Production</h5>
                         <p class="card-text">Bring your stories to life with our professional video production
                             services.
                         </p>
                         <div class="card-footer">
-                            <a href="video.html" class="text-body-secondary">
+                            <a href="videography.html" class="text-body-secondary">
                                 Explore more
                                 <i class="fas fa-arrow-right" style="font-size: 14px;"></i>
                             </a>
@@ -290,7 +288,7 @@
 
 
                 <a href="https://www.instagram.com/hagy_images_studio/" class="text-white me-3"><i
-                        class="fab fa-instagram"></i></a>
+                        class="fab fa-instagram" style="color:rgb(172, 91, 104) ;"></i></a>
 
 
             </div>
@@ -320,7 +318,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Custom JS for smooth scrolling -->
-    <script src="javascripty/js.js"></script>
+    <script src="java/js.js"></script>
 
 </body>
 
