--- a/photography.html
+++ b/photography.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Gralley</title>
+    <title>gallery</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -67,10 +67,11 @@
                         Services
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Video</a></li>
-                        <li><a class="dropdown-item" href="#">Graphic</a></li>
-
                         <li><a class="dropdown-item" href="#">Photography</a></li>
+                        <li><a class="dropdown-item" href="videography.html">Videography</a></li>
+                        <li><a class="dropdown-item" href="graphic.html">Graphic design</a></li>
+
+
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -113,7 +114,8 @@
         </div>
 
 
-        <h2 style="text-align:center" class="motto">Hagy Images Garelly</h2>
+        <h2 style="text-align:center" class="motto">Hagy Images Studio</h2>
+        <h2 style="text-align:center"> <strong>GALLERY</strong></h2>
         <hr style="border-top: 2px solid #f8f8f8; width: 100%; margin-top: 10px;">
 
     </div>
@@ -123,7 +125,10 @@
             <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                    aria-selected="true">IN DOOR </button>
+                    aria-selected="true">Wedding </button>
+
+                <button class="nav-link " id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
+                    type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">IN DOOR </button>
                 <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
                     aria-selected="false">OUT DOOR </button>
@@ -311,6 +316,9 @@
 
 
                 </div>
+            </div>
+            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
+                tabindex="0">
 
             </div>
         </div>
@@ -335,13 +343,17 @@
                 <label for="email">email:</label>
                 <a href="https://mail.google.com/"> <i class="fa-solid fa-envelope"
                         style="color:rgb(172, 91, 104) ;"></i></a>
+
+
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <h6>Follow Us</h6>
-                <a href="https://github.com/coodic" class="text-white me-3"><i class="fab fa-github"></i></a>
+
 
                 <a href="https://www.instagram.com/hagy_images_studio/" class="text-white me-3"><i
-                        class="fab fa-instagram"></i></a>
+                        class="fab fa-instagram" style="color:rgb(172, 91, 104) ;"></i></a>
+
+
 
 
             </div>
@@ -373,7 +385,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Custom JS for smooth scrolling -->
-    <script src="javascripty/js.js"></script>
+    <script src="java/js.js"></script>
 
 </body>
 
