--- a/videography.html
+++ b/videography.html
@@ -4,51 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>about</title>
+    <title>video</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <!-- Add this to your head section -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
-
     <script src="https://kit.fontawesome.com/01485634d3.js" crossorigin="anonymous"></script>
 </head>
-
-<style>
-    body {
-        font-family: 'Arial', sans-serif;
-        background-color: #fdfbfb;
-    }
-
-    .container-fluid {
-        text-align: center;
-        padding: 50px;
-        margin-top: 10rem;
-        border-color: #333;
-        border-width: 5px;
-
-    }
-
-    h2,
-    h3 {
-        font-size: 2.5rem;
-        color: #333;
-    }
-
-    p {
-        font-size: 1.5rem;
-        color: #555;
-        margin-bottom: 20px;
-    }
-
-    .embed-responsive {
-        margin-top: 30px;
-    }
-</style>
-
-
 
 <body>
     <!-- Navigation Bar -->
@@ -56,7 +19,7 @@
 
         <div class="row">
             <div class="col-md-4 d-flex align-items-center">
-                <a class="navbar-brand d-none d-md-block" href="index.html">
+                <a class="navbar-brand d-none d-md-block" href="#">
                     <img class="logo" src="logo.png" alt="Logo">
                 </a>
             </div>
@@ -83,14 +46,14 @@
                 <li class="nav-item">
                     <a class="nav-link active rectangle" href="index.html">Home</a>
                 </li>
-                <li class="nav-item dropdown ">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle rectangle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Services
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu rectangle">
                         <li><a class="dropdown-item" href="photography.html">Photography</a></li>
-                        <li><a class="dropdown-item" href="videography.html">Videography</a></li>
+                        <li><a class="dropdown-item" href="#">Videography</a></li>
                         <li><a class="dropdown-item" href="graphic.html">Graphic design</a></li>
 
 
@@ -100,40 +63,87 @@
                     <a class="nav-link rectangle" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link rectangle" href="#">about</a>
+                    <a class="nav-link rectangle" href="about.html">about</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <div class="container-fluid">
-        <h2>About Us</h2>
-        <div class="about-content">
-            <div class="container" style="background-color: #f3f1f1; color:skyblue">
-                <p> Welcome to Hagy Images Studio where every click tells a
-                    story. As passionate storytellers through the lens, we transform moments into timeless memories. Our
-                    commitment to creativity, precision, and capturing the essence of your narrative sets us apart.
-                    Explore the artistry that defines us, and let's embark on a visual journey   together. </p>
 
-            </div>
-            <div class="container" style="background-color: #f3f1f1; font-size:20px">
-                Step into excellence! Choose Hagy Images Studio for a fusion of top-notch photography, mesmerizing
-                videography, and captivating graphic design. Your vision, our expertise – a perfect match for
-                unforgettable
-                moments and stunning visuals. Elevate your experience with us!
-            </div>
-            <h3>Our Location</h3>
-            <p> Visit us to
-                experience the magic of visual storytelling and capture your special moments with us.</p>
 
-            <!-- Google Map Embed -->
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.218109701235!2d29.735157115576124!3d-2.568360285689196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19f641d2c0201b89%3A0x7632ef5cc585117f!2sHuye!5e0!3m2!1sen!2s!4v1641106262093!5m2!1sen!2s"
-                    allowfullscreen="" loading="lazy"></iframe>
+
+
+
+    <!-- Services Section -->
+    <section id="services" class="container mt-5" style="margin-top: 6rem;">
+        <h2 class="text-center mb-5"
+            style="color: #f8f8f8; font-weight: bold; font-size: 2rem; text-transform: uppercase;">
+            Videography
+            <hr style="border-top: 2px solid #f8f8f8; width: 100%; margin-top: 10px;">
+        </h2>
+
+
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 ">
+            <!-- Photoshoot Service -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="image/wedding/9.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Wedding Covarage</h5>
+                        <p class="card-text">Capture beautiful moments with our professional photography services.
+                        </p>
+
+                        <div class="card-footer">
+                            <a href="https://youtu.be/GkULPk-CUJQ" class="text-body-secondary">
+                                Play
+                                <i class="fas fa-arrow-right" style="font-size: 14px;"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Graphic Design Service -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="image/celebrities/1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Comference & Moment Production</h5>
+                        <p class="card-text">Enhance your brand with our creative graphic design solutions.</p>
+
+                        <div class="card-footer">
+                            <a href="https://youtu.be/GkULPk-CUJQ" class="text-body-secondary">
+                                Play
+                                <i class="fas fa-arrow-right" style="font-size: 14px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Video Production Service -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Film & Music Production</h5>
+                        <p class="card-text">Bring your stories to life with our professional video production
+                            services.
+                        </p>
+                        <div class="card-footer">
+                            <a href="https://youtu.be/GkULPk-CUJQ" class="text-body-secondary">
+                                Play
+                                <i class="fas fa-arrow-right" style="font-size: 14px;"></i>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
 
@@ -143,7 +153,7 @@
             <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <h6 id="contact">Contact Us</h6>
                 <label for="whatsapp">whatsapp:</label>
-                <a href="https://chat.whatsapp.com/Lo1TbKFiLHf4IOPNZvnGOf"> <i class="fa-solid fa-phone"
+                <a href="https://chat.whatsapp.com/Lo1TbKFiLHf4IOPNZvnGOf"> <i class=" fa-solid fa-phone"
                         style="color: green;"></i></a>
 
                 <label for="email">email:</label>
@@ -185,7 +195,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <!-- Custom JS for smooth scrolling -->
-    <script src="java/js.js"></script>
+    <script src="java/js.js></script>
 
 </body>
 
