--- a/index.html
+++ b/index.html
@@ -71,16 +71,9 @@
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
+
+
             <div class="carousel-item active">
-                <img src="image/A team/3.jpg" style="font-size:100px; margin-top:10px; " class="d-block w-100 mx-auto"
-                    alt="Our Baby Photo Shoot">
-                <div class="carousel-caption text-center">
-
-                    <h2 class="motto" style="color: rgb(255, 255, 255);"> WELCOME!!</h2>
-                </div>
-            </div>
-
-            <div class="carousel-item">
                 <img src="image/A team/1.jpg" style="font-size:100px; margin-top:10px;" class="d-block w-100 mx-auto"
                     alt="Celebration of our Anniversary">
                 <div class="carousel-caption text-center">
@@ -88,6 +81,17 @@
                     <h2 class="motto" style="color: rgb(255, 255, 255);">Grand Opening Ceremony</h2>
                 </div>
             </div>
+
+            <div class="carousel-item ">
+                <img src="image/A team/3.jpg" style="font-size:100px; margin-top:10px; " class="d-block w-100 mx-auto"
+                    alt="Our Baby Photo Shoot">
+                <div class="carousel-caption text-center">
+
+                    <h2 class="motto" style="color: rgb(255, 255, 255);">WELCOME!!!</h2>
+                </div>
+            </div>
+
+
 
             <div class="carousel-item">
                 <img src="image/A team/2.jpg" class="d-block w-100 mx-auto" style="font-size:100px; margin-top:10px; "
@@ -228,9 +232,9 @@
 
 
                 <div class="card h-100 text-center">
-                    <img src="image/A testimony/3.jpg" class="card-img-top" alt="...">
+                    <img src="image/indoor/10.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Ivan</h5>
+                        <h5 class="card-title">Derick </h5>
                         <p class="card-text">"In their outdoor photography, they go beyond merely capturing moments;
                             it reflects their care and expertise. "</p>
                     </div>
@@ -238,7 +242,7 @@
             </div>
             <div class="col">
                 <div class="card h-100 text-center">
-                    <img src="image/A testimony/2.jpg" class="card-img-top" alt="...">
+                    <img src="image/indoor/3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">DIX</h5>
                         <p class="card-text">"Experience the privilege of being skillfully directed by this
