--- a/photography.html
+++ b/photography.html
@@ -94,22 +94,22 @@
                 <img src="image/A outdoor/2.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:3">
-                <img src="image/A outdoor/3.jpg" alt="" loading="lazy" />
+                <img src="image/indoor/3.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:4">
                 <img src="image/A outdoor/4.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:5">
-                <img src="image/A outdoor/5.jpg" alt="" loading="lazy" />
+                <img src="image/indoor/5.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:6">
                 <img src="image/A outdoor/6.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:7">
-                <img src="image/A outdoor/7.jpg" alt="" loading="lazy" />
+                <img src="image/wedding/7.jpg" alt="" loading="lazy" />
             </span>
             <span style="--i:8">
-                <img src="image/A outdoor/8.jpg" alt="" loading="lazy" />
+                <img src="image/wedding/8.jpg" alt="" loading="lazy" />
             </span>
         </div>
 
@@ -125,13 +125,13 @@
             <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                    aria-selected="true">Wedding </button>
+                    aria-selected="true">wedding</button>
 
-                <button class="nav-link " id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
-                    type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">IN DOOR </button>
                 <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
-                    aria-selected="false">OUT DOOR </button>
+                    aria-selected="false">INDOOR</button>
+                <button class="nav-link" id="v-pills-tab" data-bs-toggle="pill" data-bs-target="#v-pills" type="button"
+                    role="tab" aria-controls="v-pills" aria-selected="false">OUTDOOR</button>
 
 
             </div>
@@ -140,6 +140,123 @@
                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                     aria-labelledby="v-pills-home-tab" tabindex="0" style="background-color:rgb(188, 186, 186);">
 
+
+                    <div class="row justify-content-center">
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/20.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/3.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/8.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/5.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/6.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/7.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/4.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/9.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/10.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/28.jpg" class="rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/12.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/31.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/22.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/15.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/16.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/17.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/wedding/18.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+
+
+                        <!-- Repeat the above card structure for other columns -->
+                    </div>
+
+
+                </div>
+
+
+
+
+
+                <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
+                    tabindex="0">
 
                     <div class="row justify-content-center">
                         <div class="col-sm">
@@ -243,19 +360,42 @@
                             </div>
                         </div>
 
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/indoor/18.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/indoor/19.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/indoor/20.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
+                        </div>
+
+
 
 
                         <!-- Repeat the above card structure for other columns -->
                     </div>
-
 
                 </div>
 
 
 
 
-                <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
-                    tabindex="0">
+
+
+
+
+                <div class="tab-pane fade" id="v-pills" role="tabpanel" aria-labelledby="v-pills-tab" tabindex="0">
                     <div class="row justify-content-center">
                         <div class="col-sm">
                             <div class="cards justify-content-center">
@@ -267,11 +407,7 @@
                                 <img src="image/A outdoor/2.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
-                        <div class="col-sm">
-                            <div class="cards justify-content-center">
-                                <img src="image/A outdoor/3.jpg" class=" rounded" alt="..." loading="lazy">
-                            </div>
-                        </div>
+
                         <div class="col-sm">
                             <div class="cards justify-content-center">
                                 <img src="image/A outdoor/4.jpg" class=" rounded" alt="..." loading="lazy">
@@ -287,40 +423,32 @@
                                 <img src="image/A outdoor/6.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
+
+
+
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/7.jpg" class=" rounded" alt="..." loading="lazy">
+                                <img src="image/A outdoor/9.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="cards justify-content-center">
-                                <img src="image/A outdoor/8.jpg" class=" rounded" alt="..." loading="lazy">
+                                <img src="image/A outdoor/10.jpg" class=" rounded" alt="..." loading="lazy">
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="cards justify-content-center">
-                            <img src="image/A outdoor/9.jpg" class=" rounded" alt="..." loading="lazy">
+                        <div class="col-sm">
+                            <div class="cards justify-content-center">
+                                <img src="image/A outdoor/11.jpg" class=" rounded" alt="..." loading="lazy">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="cards justify-content-center">
-                            <img src="image/A outdoor/10.jpg" class=" rounded" alt="..." loading="lazy">
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="cards justify-content-center">
-                            <img src="image/A outdoor/11.jpg" class=" rounded" alt="..." loading="lazy">
-                        </div>
-                    </div>
 
 
+
+
+                    </div>
                 </div>
             </div>
-            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
-                tabindex="0">
 
-            </div>
         </div>
 
 
